--- a/src/sass/mobile.css
+++ b/src/sass/mobile.css
@@ -2,7 +2,7 @@
 /* mobile */
 /* @media screen and (min-resolution: 2dppx) {
   .absolute {
-    background-image: url("/src/images/header-bg-mob@2x.jpg");
+    background-image: url("/src/images/header-bg-mob@2x.png");
   }
 } */
 
@@ -12,7 +12,7 @@
   }
 
   .absolute {
-    background-image: url(/src/images/header-bg-mob.jpg);
+    background-image: url(/src/images/header-bg-mob.png);
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -92,8 +92,8 @@
 
 /* -------------------MODAL TEAM-------------------------- */
 
-.team-item {
-  @media screen and (max-width: 1199px) and (min-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 1199px) {
+  .team-item {
     flex-direction: column;
     align-items: center;
     width: calc(100% / 1);
